<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="moreBtnClick"
            type="gallery.photoapp.gallerypro.photoviewer.MainActivity.MyClickHandlers" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/coordinatorLayout_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            tools:context=".Activity.ScrollingActivity">

            <RelativeLayout
                android:id="@+id/rl_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_5sdp">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_toLeftOf="@+id/img_settings"
                    android:background="@color/background_color"
                    app:tabGravity="fill"
                    app:tabIndicatorFullWidth="false"
                    app:tabIndicatorHeight="0dp"
                    app:tabMode="fixed" />

                <ImageView
                    android:id="@+id/img_settings"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:onClick="@{moreBtnClick::onMoreBtnClicked}"
                    android:src="@drawable/ic_menu" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4D000000"
                android:visibility="gone" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_main_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="@dimen/_170sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_favourite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:onClick="@{moreBtnClick::onFavouriteClick}"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/favourite"
                        android:textColor="@color/menu_text_color"
                        android:textSize="@dimen/_13sdp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/devider_color" />

                    <TextView
                        android:id="@+id/tv_recycle_bin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:onClick="@{moreBtnClick::onRecycleBinClick}"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/recycle_bin"
                        android:textColor="@color/menu_text_color"
                        android:textSize="@dimen/_13sdp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/devider_color" />

                    <RelativeLayout
                        android:id="@+id/rl_sorting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{moreBtnClick::onSortingClick}"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/sorting"
                            android:textColor="@color/menu_text_color"
                            android:textSize="@dimen/_13sdp" />

                    </RelativeLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/devider_color" />

                    <RelativeLayout
                        android:id="@+id/rlViewType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{moreBtnClick::onViewType}">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/view_types"
                            android:textColor="@color/menu_text_color"
                            android:textSize="@dimen/_13sdp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_8sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:src="@drawable/ic_right_play" />

                    </RelativeLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/devider_color" />

                    <RelativeLayout
                        android:id="@+id/rl_column"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{moreBtnClick::onColumnType}">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:padding="@dimen/_8sdp"
                            android:text="@string/thumbnail_columns"
                            android:textColor="@color/menu_text_color"
                            android:textSize="@dimen/_13sdp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_8sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:src="@drawable/ic_right_play" />

                    </RelativeLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_view_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="@dimen/_170sdp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:paddingVertical="@dimen/_14sdp"
                            android:text="@string/view_types"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/devider_color" />

                    <TextView
                        android:id="@+id/tvList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:onClick="@{moreBtnClick::listClick}"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_8sdp"
                        android:text="@string/list"
                        android:textColor="@color/menu_text_color"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/tvGrid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:onClick="@{moreBtnClick::gridClick}"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_8sdp"
                        android:text="@string/grid"
                        android:textColor="@color/menu_text_color"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_column"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="@dimen/_170sdp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:paddingVertical="@dimen/_14sdp"
                            android:text="@string/thumbnail_column"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.5dp"
                        android:background="@color/devider_color" />

                    <TextView
                        android:id="@+id/tvColumn2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:onClick="@{moreBtnClick::onColumn2Click}"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_8sdp"
                        android:text="@string/_2_column"
                        android:textColor="@color/menu_text_color"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/tvColumn3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:onClick="@{moreBtnClick::onColumn3Click}"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_8sdp"
                        android:text="@string/_3_column"
                        android:textColor="@color/menu_text_color"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/tvColumn4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:onClick="@{moreBtnClick::onColumn4Click}"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_8sdp"
                        android:text="@string/_4_column"
                        android:textColor="@color/menu_text_color"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <include
                android:id="@+id/content"
                layout="@layout/content_scrolling" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>